# geometry_library

./: .gitignore  CMakeLists.txt  Readme.md  full_project.txt
.github/workflows/: ci.yml
include/geometry/: BSpline.h  BezierCurve.h  ICurve.h  LineSegment.h  Point3D.h  Vector3D.h
include/geometry/BasePrimitives/: Matrix2x2.h  Point3D.h  Vector3D.h
include/geometry/BoundingBox/: BoundingBox.h
include/geometry/Curves/: BSpline.h  BSplineCurve.h  BezierCurve.h  ICurve.h  LineSegment.h
include/geometry/Surfaces/: BSplineSurface.h  BezierSurface.h  ISurface.h
src/: BSpline.cpp  BezierCurve.cpp  LineSegment.cpp  Point3D.cpp  Vector3D.cpp
src/BasePrimitives/: Matrix2x2.cpp  Point3D.cpp  Vector3D.cpp
src/BoundingBox/: BoundingBox.cpp
src/Curves/: BSpline.cpp  BSplineCurve.cpp  BezierCurve.cpp  ICurve.cpp  LineSegment.cpp
src/Surfaces/: BSplineSurface.cpp  BezierSurface.cpp  ISurface.cpp
tests/: test_main.cpp
